# profkit

./: .gitignore  .pre-commit-config.yaml  README.md  genindex.html  index.html  make.bat  objects.inv  overview.html  py-modindex.html  pyproject.toml  roadmap.html  search.html  searchindex.js  tox.ini
.github/workflows/: ci.yml
_sources/: index.rst.txt  overview.rst.txt  roadmap.rst.txt
_sources/autoapi/: index.rst.txt
_sources/autoapi/profkit/: index.rst.txt
_sources/autoapi/profkit/about/: index.rst.txt
_sources/autoapi/profkit/profilers/: index.rst.txt
_sources/autoapi/profkit/profilers/cprofile_profiler/: index.rst.txt
_sources/autoapi/profkit/profilers/profiler/: index.rst.txt
_sources/autoapi/profkit/profilers/pyinstrument_profiler/: index.rst.txt
_sources/autoapi/profkit/profilers/yappi_profiler/: index.rst.txt
_sources/autoapi/profkit/profkit/: index.rst.txt
_sources/autoapi/profkit/settings/: index.rst.txt
_sources/autoapi/src/: index.rst.txt
_sources/autoapi/src/profkit/: index.rst.txt
_sources/autoapi/src/profkit/profilers/: index.rst.txt
_sources/autoapi/src/profkit/profkit/: index.rst.txt
_sources/user_guide/: getting_started.rst.txt  index.rst.txt
_static/css/: custom.css
autoapi/: index.html
autoapi/profkit/: index.html
autoapi/profkit/about/: index.html
autoapi/profkit/profilers/: index.html
autoapi/profkit/profilers/cprofile_profiler/: index.html
autoapi/profkit/profilers/profiler/: index.html
autoapi/profkit/profilers/pyinstrument_profiler/: index.html
autoapi/profkit/profilers/yappi_profiler/: index.html
autoapi/profkit/profkit/: index.html
autoapi/profkit/settings/: index.html
autoapi/src/: index.html
autoapi/src/profkit/: index.html
autoapi/src/profkit/profilers/: index.html
autoapi/src/profkit/profkit/: index.html
autoapi/src/profkit/settings/: index.html
docs/: Makefile  make.bat
docs/source/: conf.py  index.rst  overview.rst
logo/: logo.idraw
src/profkit/: about.py  profkit.py  settings.py
src/profkit/profilers/: __init__.py  cprofile_profiler.py  profiler.py  pyinstrument_profiler.py  yappi_profiler.py
tests/: conftest.py
tests/profkit/: about_test.py  debug_test.py  profkit_test.py
tests/profkit/profilers/: cprofile_profiler_test.py  pyinstrument_profiler_test.py  yappi_profiler_test.py
user_guide/: getting_started.html  index.html
(+9 files in other folders)
